--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 	name = Emory Petermann
 [core]
 	editor = nvim -u ~/.config/nvim/git.vim
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = diff-so-fancy | less --tabs=4 -R
 	autocrlf = input
 [push]
 	default = simple
