--- a/.wakatime.cfg
+++ b/.wakatime.cfg
@@ -1,9 +1,9 @@
 [settings]
-debug = false
+debug=true
 hidefilenames = false
 ignore =
     COMMIT_EDITMSG$
     PULLREQ_EDITMSG$
     MERGE_MSG$
     TAG_EDITMSG$
-api_key= f3bdbc7e-3ee9-4bb7-a03d-574c15fed6a4 
+api_key=f3bdbc7e-3ee9-4bb7-a03d-574c15fed6a4
