--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -9,6 +9,7 @@
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-prettier": "^2.6.0",
     "prettier-eslint": "^8.8.1",
+    "prettier-eslint-cli": "^4.7.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
   }
