--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -8,6 +8,7 @@
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-prettier": "^2.6.0",
+    "prettier": "^1.13.5",
     "prettier-eslint": "^8.8.1",
     "prettier-eslint-cli": "^4.7.1",
     "webpack": "^4.12.0",
