--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@
 # by the OSes font system. Setting them manually is useful for font families
 # that have many weight variants like Book, Medium, Thick, etc. For example:
 font_family Inconsolata Nerd Font Medium
-font_size        14.0
+font_size 14.0
 
 # The amount the font size is changed by (in pts) when increasing/decreasing
 # the font size in a running terminal.
@@ -137,7 +137,7 @@ font_size        14.0
 # increase CPU usage and might cause flicker in full screen programs that
 # redraw the entire screen on each loop, because kitty is so fast that partial
 # screen updates will be drawn.
-# input_delay 3
+input_delay 0
 
 # Sync screen updates to the refresh rate of the monitor. This prevents
 # tearing (https://en.wikipedia.org/wiki/Screen_tearing) when scrolling. However,
