--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -2,13 +2,13 @@
   "dependencies": {
     "babel-eslint": "^8.2.3",
     "ember-cli": "^3.1.4",
-    "ember-cli-update": "^0.21.4",
     "eslint": "^5.0.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-prettier": "^2.6.0",
     "neovim": "^4.1.0",
+    "npm": "^6.1.0",
     "prettier": "^1.13.5",
     "prettier-eslint": "^8.8.1",
     "prettier-eslint-cli": "^4.7.1",
