--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -6,12 +6,13 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-ember-suave": "^1.0.0",
-    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.6.1",
     "neovim": "^4.1.0",
     "npm": "^6.1.0",
     "prettier": "^1.13.5",
     "prettier-eslint": "^8.8.1",
     "prettier-eslint-cli": "^4.7.1",
+    "tern": "^0.21.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
