--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-ember": "^5.2.0",
     "eslint-plugin-ember-suave": "^1.0.0",
     "eslint-plugin-prettier": "^2.6.1",
+    "livedown": "^2.1.1",
     "neovim": "^4.1.0",
     "npm": "^6.1.0",
     "prettier": "^1.13.5",
