--- a/.gitconfig
+++ b/.gitconfig
@@ -20,3 +20,14 @@
 	enabled = true
 [diff-so-fancy]
 	markEmptyLines = false
+
+[diff]
+  tool = kitty
+  guitool = kitty.gui
+[difftool]
+  prompt=false
+  trustExitCode = true
+[difftool "kitty"]
+  cmd = kitty +kitten diff $LOCAL $REMOTE
+[difftool "kitty.gui"]
+  cmd = kitty kitty +kitten diff $LOCAL $REMOTE
