:zap: minor adjustments to kitty and remove debug flag from wakatime

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 font_family      PragmataPro Mono
-font_size 13.5
+font_size 15.0
 
 scrollback_lines 10000
 scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
@@ -10,7 +10,7 @@ wheel_scroll_multiplier 5.0
 
 focus_follows_mouse yes
 
-repaint_delay 5
+repaint_delay 10
 input_delay 3
 sync_to_monitor yes
 
@@ -23,7 +23,7 @@ remember_window_size  no
 initial_window_width  1280
 initial_window_height 770
 
-shell .
+shell /usr/local/bin/zsh
 editor vim
 
 close_on_child_death yes
