:bug: remove some unused stuff

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@ remember_window_size  no
 initial_window_width  1280
 initial_window_height 770
 
-shell /usr/local/bin/zsh
+shell /usr/local/bin/zsh --login
 editor vim
 
 close_on_child_death yes
