--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-font_family      PragmataPro Mono
+font_family Inconsolata Nerd Font
 font_size 15.0
 
 scrollback_lines 10000
@@ -31,9 +31,56 @@ macos_quit_when_last_window_closed yes
 
 macos_hide_titlebar yes
 
+# The foreground color
+foreground       #839496
 
-kitty_mod ctrl+shift
+# The background color
+background       #002b36
+
+# The foreground for selections
+selection_foreground #93a1a1
+
+# The background for selections
+selection_background #073642
+
+# The 16 terminal colors. There are 8 basic colors, each color has a dull and
+# bright version.
+
+# black
+color0   #073642
+color8   #002b36
+
+# red
+color1   #dc322f
+color9   #cb4b16
+
+# green
+color2   #859900
+color10  #586e75
+
+# yellow
+color3   #b58900
+color11  #657b83
+
+# blue
+color4  #268bd2
+color12 #839496
+
+# magenta
+color5   #d33682
+color13  #6c71c4
+
+# cyan
+color6   #2aa198
+color14  #93a1a1
+
+# white
+color7   #839496
+color15  #fdf6e3
+
+
 clear_all_shortcuts yes
+kitty_mod ctrl+shift
 map kitty_mod+c  copy_to_clipboard
 map kitty_mod+v  paste_from_clipboard
 map kitty_mod+s  paste_from_selection
