:zap: fix kitty paste shortcut :zap: pure prompt :zap: zsh-syntax-highlighting

--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -4,6 +4,7 @@
     "neovim": "^4.1.0",
     "node-gyp": "^3.7.0",
     "npm": "^6.1.0",
+    "pure-prompt": "^1.7.0",
     "tern": "^0.21.0"
   }
 }
