--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -83,10 +83,9 @@ clear_all_shortcuts yes
 kitty_mod ctrl+shift
 map kitty_mod+c  copy_to_clipboard
 map kitty_mod+v  paste_from_clipboard
-map kitty_mod+s  paste_from_selection
-map shift+insert paste_from_selection
-map kitty_mod+o  pass_selection_to_program
 
+map super+c copy_to_clipboard
+map super+v  paste_from_clipboard
 
 map kitty_mod+enter new_window_with_cwd
 
