--- a/.chunkwmrc
+++ b/.chunkwmrc
@@ -1,41 +1,9 @@
 #!/bin/bash
 
-#
-# NOTE: any 'chunkc' command that is run from this config file
-#       that is NOT 'chunkc core::<..>' or 'chunkc set ..'
-#       MUST be put in the background using &
-#
-#       e.g:
-#       chunkc tiling::rule --owner Finder --name Copy --state float &
-#
-
-#
-# NOTE: specify the absolutepath of the file to use for logging.
-#       'stdout' or 'stderr' can be used instead of an actual filepath.
-#
-
-chunkc core::log_file stdout
-
-#
-# NOTE: specify the desired level of logging.
-#
-#       - none, debug, warn, error
-#
-
-chunkc core::log_level warn
-
-#
-# NOTE: specify the absolutepath to the directory to use when loading a plugin.
-#
-
-chunkc core::plugin_dir ~/.chunkwm_plugins
-
-#
-# NOTE: if enabled, chunkwm will monitor the specified plugin_dir
-#       and automatically reload any '.so' file that is changed.
-#
-
-chunkc core::hotload 0
+chunkc core::log_file stderr
+chunkc core::log_level none
+chunkc core::plugin_dir /usr/local/opt/chunkwm/share/chunkwm/plugins
+chunkc core::hotload 1
 
 #
 # NOTE: the following are config variables for the chunkwm-tiling plugin.
@@ -117,9 +85,6 @@ chunkc set focused_border_skip_monocle   0
 chunkc set ffm_bypass_modifier           fn
 chunkc set ffm_standby_on_float          1
 
-#
-# NOTE: specify plugins to load when chunkwm starts.
-#
 
 chunkc core::load border.so
 chunkc core::load tiling.so
@@ -131,4 +96,3 @@ chunkc core::load ffm.so
 
 chunkc tiling::rule --owner Finder --name Copy --state float &
 chunkc tiling::rule --owner \"App Store\" --state float &
-chunkc tiling::rule --owner Emacs --except "^$" --state tile &
