--- a/.gitconfig
+++ b/.gitconfig
@@ -31,3 +31,7 @@
   cmd = kitty +kitten diff $LOCAL $REMOTE
 [difftool "kitty.gui"]
   cmd = kitty kitty +kitten diff $LOCAL $REMOTE
+[status]
+	submoduleSummary = true
+[url "git@github.com:"]
+	insteadOf = https://github.com/
