--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
 
 wheel_scroll_multiplier 5.0
 
-focus_follows_mouse yes
+focus_follows_mouse no
 
 repaint_delay 10
 input_delay 3
