:zap: some nicer default behavior imho

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 	pager = diff-so-fancy | less --tabs=4 -R
 	autocrlf = input
 [push]
-	default = simple
+	default = current
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [pull]
@@ -35,3 +35,7 @@
 	submoduleSummary = true
 [url "git@github.com:"]
 	insteadOf = https://github.com/
+[rebase]
+	autostash = true
+[fetch]
+	recurseSubmodules = true
