--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
 	email = epetermann@neighborly.com
 	name = Emory Petermann
 [core]
-	editor = nvim -u ~/.config/nvim/git.vim
+	editor = vim -u ~/.config/nvim/git.vim
 	pager = diff-so-fancy | less --tabs=4 -R
 	autocrlf = input
 [push]
