--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -1,14 +1,23 @@
 {
   "dependencies": {
     "alex": "^5.1.0",
+    "bower": "^1.8.4",
+    "chalk-cli": "^4.0.0",
+    "eslint-watch": "^4.0.2",
+    "figlet-cli": "^0.1.0",
+    "image-to-ascii-cli": "^1.0.9",
+    "jsonlint": "^1.6.3",
     "livedown": "^2.1.1",
+    "lolcatjs": "^2.3.2",
     "markdownlint": "^0.11.0",
     "markdownlint-cli": "^0.13.0",
+    "n": "^2.1.12",
     "neovim": "^4.1.0",
     "node-gyp": "^3.7.0",
     "npm": "^6.1.0",
-    "prettier": "^1.14.2",
-    "tern": "^0.21.0",
+    "prettier": "^1.14.3",
+    "tern": "^0.22.3",
+    "typescript": "^3.1.1",
     "write-good": "^0.13.1"
   }
 }
