--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 	pager = emojify | diff-so-fancy | less --tabs=4 -RFX
 	autocrlf = false
 [commit]
-  template = ~/.gitmessage
+  ;template = ~/.gitmessage
 	cleanup = strip
 [push]
 	default = current
