:zap: better mintty experience

--- a/.minttyrc
+++ b/.minttyrc
@@ -3,13 +3,13 @@ FontHeight=16
 FontSmoothing=full
 Locale=en_US
 Charset=UTF-8
-ThemeFile=base16-gruvbox-light-pale
+ThemeFile=E:\repos\base16-mintty\mintty\base16-gruvbox-light-soft.minttyrc
 BoldAsColour=yes
 BoldAsFont=no
 AllowBlinking=yes
 FontWeight=400
 FontIsBold=no
-Charwidth=full
+Charwidth=Unicode
 Emojis=windows
 EmojiPlacement=middle
 MiddleClickAction=paste
