:zap: fix kitty colors

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 #
 # colors
-include ../../.base16-manager/kdrag0n/base16-kitty/colors/base16-gruvbox-dark-hard-256.conf
+include ../../.base16-manager/kdrag0n/base16-kitty/colors/base16-gruvbox-dark-medium-256.conf
 
 font_family Inconsolata Nerd Font
 font_size 18.0
@@ -21,6 +21,8 @@ enable_audio_bell no
 visual_bell_duration 0.2
 window_alert_on_bell no
 bell_on_tab yes
+
+layout tall
 
 remember_window_size  no
 initial_window_width  1280
