--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@
 include ../../.base16-manager/kdrag0n/base16-kitty/colors/base16-gruvbox-dark-medium-256.conf
 
 font_family Inconsolata Nerd Font
-font_size 18.0
+font_size 20.0
 
 scrollback_lines 10000
 scrollback_pager less --chop-long-lines --RAW-CONTROL-CHARS +INPUT_LINE_NUMBER
@@ -36,9 +36,10 @@ macos_quit_when_last_window_closed yes
 
 macos_hide_titlebar yes
 
+kitty_mod ctrl+shift
 
 clear_all_shortcuts yes
-kitty_mod ctrl+shift
+
 map kitty_mod+c  copy_to_clipboard
 map kitty_mod+v  paste_from_clipboard
 
@@ -47,9 +48,21 @@ map super+v  paste_from_clipboard
 
 map kitty_mod+enter new_window_with_cwd
 
+map kitty_mod+w close_window
+
+map kitty_mod+r start_resizing_window
+
+map kitty_mod+] next_window
+map kitty_mod+[ previous_window
+
+map kitty_mod+f move_window_forward
+map kitty_mod+b move_window_backward
+
 map kitty_mod+right next_tab
 map kitty_mod+left  previous_tab
 map kitty_mod+t     new_tab_with_cwd
+
+map kitty_mod+l next_layout
 
 map kitty_mod+equal     change_font_size all +0.5
 map kitty_mod+minus     change_font_size all -0.5
