:zap: updated vim configuration

--- a/.minttyrc
+++ b/.minttyrc
@@ -1,5 +1,5 @@
-Font=PragmataProMonoLiga NF
-FontHeight=16
+Font=PragmataPro Mono Liga
+FontHeight=18
 FontSmoothing=full
 Locale=en_US
 Charset=UTF-8
@@ -9,10 +9,18 @@ BoldAsFont=no
 AllowBlinking=yes
 FontWeight=400
 FontIsBold=no
-Charwidth=Unicode
+Charwidth=unicode
 Emojis=windows
 EmojiPlacement=middle
 MiddleClickAction=paste
 RightClickAction=menu
-Rows=50
+Rows=30
 Language=@
+CopyAsRTF=no
+PgUpDnScroll=yes
+Scrollbar=none
+ClipShortcuts=no
+WindowShortcuts=no
+SwitchShortcuts=no
+ZoomShortcuts=no
+AltFnShortcuts=no
