--- a/.config/yarn/global/package.json
+++ b/.config/yarn/global/package.json
@@ -1,20 +1,24 @@
 {
   "dependencies": {
-    "alex": "^7.1.0",
+    "alex": "^8.0.0",
     "bower": "^1.8.4",
-    "chalk-cli": "^4.0.0",
-    "eslint-watch": "^5.1.2",
+    "ember-cli": "^3.1.4",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-ember": "^7.2.0",
+    "eslint-plugin-ember-suave": "^2.0.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-watch": "^6.0.1",
     "figlet-cli": "^0.1.0",
     "github-release-notes": "^0.17.0",
-    "image-to-ascii-cli": "^1.0.9",
     "jsonlint": "^1.6.3",
-    "livedown": "^2.1.1",
-    "lolcatjs": "^2.3.2",
-    "neovim": "^4.5.0",
-    "node-gyp": "^4.0.0",
-    "npm": "^6.9.0",
-    "prettier": "^1.17.0",
-    "tern": "^0.23.0",
-    "write-good": "^1.0.1"
+    "markdownlint": "^0.17.2",
+    "markdownlint-cli": "^0.19.0",
+    "neovim": "^4.1.0",
+    "node-gyp": "^6.0.0",
+    "prettier": "^1.14.3",
+    "tern": "^0.24.3",
+    "typescript": "^3.1.1",
+    "write-good": "^1.0.2"
   }
 }
