--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
   name = Emory Petermann
 [core]
   editor = vim -u ~/.config/nvim/git.vim
-#	pager = diff-so-fancy | less --tabs=4 -RF
+  pager = emojify | diff-so-fancy | less --tabs=4 -RFX
   preloadindex = true
   fscache = true
   autocrlf = false
