--- a/.gitconfig
+++ b/.gitconfig
@@ -2,7 +2,7 @@
   name = Emory Petermann
 [core]
   editor = vim -u ~/.config/nvim/git.vim
-  pager = emojify | diff-so-fancy | less --tabs=4 -RFX
+  pager = emojify | diff-so-fancy | less --tabs=4 -RF
   preloadindex = true
   fscache = true
   autocrlf = false
@@ -50,8 +50,6 @@
   la = "!git config -l | grep alias | cut -c 7-"
 [pull]
   rebase = true
-[url "ssh://git@github.com/"]
-  insteadOf = https://github.com/
 [color "diff"]
   whitespace = red reverse
 [rerere]
